--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ header h1 {
   flex-wrap: wrap;
   justify-content: space-between;
   background-color: red;
+  width: 300px;
+  margin: 0 auto;
 }
 #main-container div {
   flex: 0 32%;
@@ -154,12 +156,12 @@ header h1 {
   text-align: center;
   font-size: 90px;
 }
-#main-container #c1 {
+#main-container #bottom {
   margin-bottom: 0px;
 }
-#main-container #c2 {
-  margin-bottom: 0px;
-}
-#main-container #c3 {
-  margin-bottom: 0px;
+#gameText {
+  text-align: center;
+  padding: 30px;
+  display: fixed;
+  height: 100px;
 }
