--- a/style.less
+++ b/style.less
@@ -66,23 +66,26 @@ header{
   flex-wrap: wrap;
   justify-content: space-between;
   background-color: red;
+  width: 300px;
+  margin: 0 auto;
     div{
         flex: 0 32%;
         height: 100px;
         margin-bottom: 2%; /* (100-32*3)/2 */
         background-color: lightgrey;
+        
         p{
             text-align: center;
             font-size: 90px;
         }
     }
-    #c1{
+    #bottom{
         margin-bottom: 0px;
     }
-    #c2{
-        margin-bottom: 0px;
-    }
-    #c3{
-        margin-bottom: 0px;
-    }
+}
+#gameText{
+    text-align: center;
+    padding: 30px;
+    display: fixed;
+    height: 100px;
 }
