--- a/style.css
+++ b/style.css
@@ -129,6 +129,18 @@ table {
 p {
   color: blue;
 }
+#gameSelect {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  background-color: red;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
 header {
   text-align: center;
   margin-bottom: 30px;
